# NexusPurge

./: .gitignore  AGENTS.md  CLAUDE.md  ISSUES.md  MEETING_SUMMARY.md  NexusPurge_Codex_Prompt.md  PPT_REPORT.md  PROJECT_ANALYSIS.md  PROJECT_DEVELOPMENT_ANALYSIS.md  README.md  TEST_GUIDE.md  TODO  TODO.md  index.html  nexus  nexus.cmd  nexus.ps1  package-lock.json  package.json  pnpm-lock.yaml  project_requirment.md
.github/workflows/: build.yml  ci.yml
docs/: 1.프로젝트_개요.md  2.요구사항.md  3.아키텍쳐.md  4.데이터모델.md  5.Phase_계획.md  6.TODO.md  7.개발 주의사항.md  8.고객확인사항.md  FEATURE_BACKLOG_INFRA.md  FEATURE_IDEAS.md  INFRA_FEATURE_IDEAS.md  TEST_GUIDE.md  TODO.md  UPLOADTOOL_REPOSITORY_ANALYSIS.md  USER_GUIDE.md  UploadTool_Codex_CLI_완전통합_개발지시서.md  WBS.md  WBS_SINCE_0714.md  api_integration_guide.md  architecture_and_design.md  cdn_development_report.md  feature-candidates.md  kt_cdn.md  lg_cdn.md  progress.md  request.md  user_info.md  user_manual.md  사용자_가이드.md
docs/superpowers/plans/: 2026-07-09-purge-hardening-and-audit.md  2026-07-13-todo-items.md
docs/superpowers/specs/: 2026-07-09-purge-hardening-and-audit-design.md  2026-07-13-todo-items-design.md
scripts/: README.md  aws-permission-check.ps1  aws-permission-check.sh  cleanup-dmg.sh  localstack-integration.sh  nexus-core.ps1  nexus-core.sh  nexus.ps1  nexus.sh  ui-screenshot-checklist.md
scripts/cmds/: build.ps1  build.sh  clean.ps1  clean.sh  dev.ps1  dev.sh  test.ps1  test.sh  util.ps1  util.sh
scripts/lib/: output.ps1  output.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/cdn/: akamai.rs  base.rs  cloudfront.rs  hyosung.rs  kt.rs  lguplus.rs  mock.rs  mod.rs
src-tauri/src/adapters/storage/: base.rs  mod.rs  s3.rs
src-tauri/src/commands/: auth.rs  cdn.rs  log_shipping.rs  mod.rs  operation_log.rs  s3.rs  sync.rs
src-tauri/src/services/: auth.rs  log_shipping.rs  mod.rs  operation_log.rs
src-tauri/src/utils/: adapter_cache.rs  audit_level.rs  config.rs  crypto.rs  hash.rs  mod.rs  network_stats.rs  retry.rs  sigv4.rs  transfer_control.rs  validate.rs
src/components/: ErrorBoundary.module.css  ErrorBoundary.tsx
src/components/common/: ConfirmDialog.module.css  ConfirmDialog.tsx  ContextMenu.module.css  ContextMenu.tsx  InputDialog.module.css  InputDialog.tsx
src/components/layout/: StatusBar.module.css  StatusBar.tsx  TitleBar.module.css  TitleBar.tsx  Toolbar.module.css  Toolbar.tsx
src/components/log/: LogPanel.module.css  LogPanel.tsx
src/components/modals/: ProfileModal.module.css  ProfileModal.test.tsx  ProfileModal.tsx  PropertiesDialog.module.css  PropertiesDialog.tsx  PurgeDialog.module.css  PurgeDialog.tsx  PurgeResultDialog.module.css  PurgeResultDialog.tsx  SettingsModal.module.css  SettingsModal.tsx
src/components/panels/: LocalPanel.tsx  Panel.module.css  RemotePanel.tsx
src/components/sync/: SyncPreviewDialog.module.css  SyncPreviewDialog.tsx
src/components/transfer/: ProgressDialog.module.css  ProgressDialog.tsx  SyncPreviewDialog.module.css  SyncPreviewDialog.tsx  TransferButtons.module.css  TransferButtons.tsx  (+2 more)
src/hooks/: useLocalFs.ts  useOsFileDrop.test.ts  useOsFileDrop.ts  usePanelDrag.test.ts  usePanelDrag.ts  useProfile.ts  usePurge.ts  useS3.ts  useTransfer.ts  useVirtualList.ts
src/store/: appStore.ts
src/styles/: global.css  variables.css
src/test/: appStore.test.ts  setup.ts
src/types/: index.ts
src/utils/: batch-settings.ts  cdn.ts  format-time.ts  s3-key.test.ts  s3-key.ts
test-samples/: README.txt  TEST-GUIDE.txt  overwrite-target-v2.txt  overwrite-target.txt  purge-test-01.txt  purge-test-02.txt  purge-test-03.txt  purge-test-04.txt  purge-test-05.txt  skip-target.txt
test-samples/scenarios/: INDEX.txt
(+1861 files in other folders)
