[package]
name = "cdn-upload-tool"
version = "0.1.0"
description = "CDN Upload Tool with S3 upload and CDN auto-purge"
authors = []
edition = "2021"

[lib]
name = "cdn_upload_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cdn-upload-tool"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2
tauri               = { version = "2", features = ["devtools"] }
tauri-plugin-shell  = "2"
tauri-plugin-dialog = "2"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio   = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP — native-tls = OS TLS (SChannel/Windows), aws-lc-sys 없음
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "stream"] }

# SigV4 서명 (순수 Rust HMAC/SHA2, C 컴파일 없음)
# AWS SDK for S3 operations that must use the official SigV4 implementation
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"

hmac        = "0.12"
sha2        = "0.10"
hex         = "0.4"

# URL 인코딩 (순수 Rust)
percent-encoding = "2"
url              = "2"

# OS keyring
keyring = "2"

# MD5 (ETag 비교)
md5 = "0.7"

# 암호화 프로필 (AES-256-GCM + PBKDF2, 순수 Rust)
aes-gcm  = "0.10"
pbkdf2   = { version = "0.12", features = ["hmac"] }
rand     = "0.8"
base64   = "0.22"

# Error handling
anyhow    = "1"
thiserror = "1"

# Misc
uuid      = { version = "1", features = ["v4"] }
chrono    = { version = "0.4", features = ["serde"] }
dirs      = "5"
mime_guess = "2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender   = "0.2"   # 날짜별 audit 로그 파일 (logs/audit.YYYY-MM-DD.log)

[profile.dev]
incremental = true

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
# 고객사 요청: 속도 우선 (기존 "s"는 바이너리 크기 최적화 — 해시/전송/Purge 처리량이 우선순위이므로 3으로 전환)
opt-level     = 3
strip         = true
